--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "lint": "nx lint",
+    "lint:fix": "nx lint --fix",
+    "test": "nx test --watch --all",
+    "test:staged": "nx test",
+    "test:cov": "nx test --coverage"
   },
   "private": true,
   "dependencies": {
