--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@angular/ssr": "~17.0.0",
     "@nx/angular": "17.1.3",
     "express": "~4.18.2",
+    "primeflex": "^3.3.1",
+    "primeng": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
