--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nx/angular": "17.1.3",
     "express": "~4.18.2",
     "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
     "primeng": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
