--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/ssr": "~17.0.0",
     "@nx/angular": "17.1.3",
     "express": "~4.18.2",
+    "ngx-mask": "16.4.1",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^17.0.0",
