--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-server": "~17.0.0",
     "@angular/router": "~17.0.0",
     "@angular/ssr": "~17.0.0",
+    "@ngx-translate/core": "^15.0.0",
     "@nx/angular": "17.1.3",
     "express": "~4.18.2",
     "primeflex": "^3.3.1",
