--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~17.0.0",
     "@angular/platform-browser-dynamic": "~17.0.0",
     "@angular/router": "~17.0.0",
+    "@ngneat/query": "^2.0.1",
     "@ngx-translate/core": "^15.0.0",
     "@nx/angular": "17.1.3",
     "primeflex": "^3.3.1",
@@ -42,6 +43,7 @@
     "@angular/cli": "~17.0.0",
     "@angular/compiler-cli": "~17.0.0",
     "@angular/language-service": "~17.0.0",
+    "@ngneat/query-devtools": "^2.0.0-beta.0",
     "@nx/cypress": "17.1.3",
     "@nx/eslint": "17.1.3",
     "@nx/eslint-plugin": "17.1.3",
