--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@ngx-translate/core": "^15.0.0",
     "@nx/angular": "17.1.3",
     "primeflex": "^3.3.1",
-    "primeicons": "^6.0.1",
-    "primeng": "^17.0.0",
+    "primeicons": "7.0.0",
+    "primeng": "17.18.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
