--- a/.github/workflows/sync-repo.yml
+++ b/.github/workflows/sync-repo.yml
@@ -11,7 +11,10 @@ jobs:
       contents: write
     steps:
       - name: Syncing repository
-        run: gh repo sync $REPOSITORY -b $BRANCH_NAME
+        run: |
+          gh repo sync $REPOSITORY -b main
+          gh repo sync $REPOSITORY -b develop
+          git pull
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPOSITORY: ${{ github.repository }}
