--- a/.github/workflows/sync-repo.yml
+++ b/.github/workflows/sync-repo.yml
@@ -10,8 +10,14 @@ jobs:
     permissions:
       contents: write
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Syncing repository
-        run: gh repo sync $REPOSITORY -b $BRANCH_NAME
+        run: |
+          gh repo sync $REPOSITORY -b main
+          gh repo sync $REPOSITORY -b develop
+          git pull
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPOSITORY: ${{ github.repository }}
