--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "nx build",
     "lint": "nx lint",
     "lint:fix": "nx lint --fix",
+    "format": "nx format",
+    "format:fix": "nx format --fix",
     "test": "nx test --watch --all",
     "e2e": "nx e2e e2e",
     "test:staged": "nx test",
