--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "nx test --watch --all",
     "e2e": "nx e2e e2e",
     "test:staged": "nx test",
-    "test:cov": "nx test --coverage"
+    "test:cov": "nx test --coverage",
+    "prepare": "husky"
   },
   "private": true,
   "dependencies": {
@@ -64,6 +65,7 @@
     "eslint": "~8.46.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
+    "husky": "^9.1.5",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~13.1.4",
