style: colors and layout fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,6 @@
     "angular-page": {
       "skipChangeDetectionOnPush": true
     }
-  }
+  },
+  "material-icon-theme.activeIconPack": "angular"
 }
