--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "format": "nx format",
     "format:fix": "nx format --fix",
     "test": "nx test --watch --all",
+    "test:only": "jest --watch",
     "e2e": "nx e2e e2e",
     "test:staged": "nx test",
-    "test:cov": "nx test --coverage",
-    "prepare": "husky"
+    "test:cov": "nx test --coverage"
   },
   "private": true,
   "dependencies": {
@@ -47,6 +47,7 @@
     "@angular/cli": "~17.0.0",
     "@angular/compiler-cli": "~17.0.0",
     "@angular/language-service": "~17.0.0",
+    "@happy-dom/jest-environment": "^15.7.4",
     "@ngneat/query-devtools": "^2.0.0-beta.0",
     "@nx/cypress": "17.1.3",
     "@nx/eslint": "17.1.3",
@@ -65,6 +66,7 @@
     "eslint": "~8.46.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
+    "happy-dom": "^15.7.4",
     "husky": "^9.1.5",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
